Implement services in Blaozr

--- a/Crypto.Blazor/Shared/Crypto.Blazor.Shared.csproj
+++ b/Crypto.Blazor/Shared/Crypto.Blazor.Shared.csproj
@@ -8,5 +8,6 @@
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
   </ItemGroup>
 </Project>
