--- a/Crypto.Blazor/Server/Crypto.Blazor.Server.csproj
+++ b/Crypto.Blazor/Server/Crypto.Blazor.Server.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="6.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
